refactor [java]: replace indexed methods by first/last variants
GitOrigin-RevId: 2726843fe70b25ca93847ee1fb6409241199e5ae